# argmining24-deepct-lexical-argument-retrieval

./: .gitignore  LICENSE  README.md  pyproject.toml
data/touche-pools/: pool-50-2020.txt  pool-50-2021.txt
notebooks/: all_parse_to_csv_and_eval.ipynb  combined_fasttext_tagged_corpus.ipynb  compare_deepct_pools_topics_conclusions_original.ipynb  create_passages_on_conclusion_without_conclusion_without_leakage.ipynb  deepct_create_train_data_on_conclusions_without_leakage.ipynb  evaluate_conclusions_no_split.ipynb  evaluate_diff_models_right_version.ipynb  evaluate_diff_models_right_version_w_dph.ipynb  evaluate_marco.ipynb  evaluate_original_w_dph.ipynb  evaluate_tag_essays_fasttext_100.ipynb  evaluation.ipynb  evaluation_ecir.ipynb  evalute_diff_retr_models.ipynb  gpu_corpus.ipynb  plot_deepcts_loss.ipynb  plotting.ipynb  pyterrier_deepct.ipynb  remove_unjudged.ipynb  remove_unjudged_from_res.ipynb  stats.ipynb  tag_corpus.ipynb  tag_webd_fasttext.ipynb  tagger_stats.ipynb  test_inference_touche_labels.ipynb
notebooks/extra_grid_searches/: grid_search_bm25.ipynb  grid_search_bm25_rm3_latex.ipynb  grid_search_bm25_rm3_targers_latex.ipynb  grid_search_bm25_rm3_unjudged_latex.ipynb  grid_search_bm25_targers.ipynb  grid_search_bm25_unjudged.ipynb  grid_search_dlm_latex.ipynb  grid_search_dlm_rm3_latex.ipynb  grid_search_dlm_rm3_targers_latex.ipynb  grid_search_dlm_rm3_unjudged_latex.ipynb  grid_search_dlm_targers_latex.ipynb  grid_search_dlm_unjudged_latex.ipynb
notebooks/grid_searches/: evaluate_dph.ipynb  grid_search_bm25.ipynb  grid_search_bm25_rm3.ipynb  grid_search_dlm.ipynb  grid_search_dlm_rm3.ipynb
notebooks/grid_searches/bm25_rm3/: grid_search_bm25_rm3.ipynb  grid_search_bm25_rm3_targers.ipynb  grid_search_bm25_rm3_unjudged.ipynb
notebooks/grid_searches/targers/: grid_search_bm25_rm3_targers.ipynb  grid_search_bm25_targers.ipynb  grid_search_dlm_rm3_targers.ipynb  grid_search_dlm_targers.ipynb
notebooks/grid_searches/unjudged/: grid_search_bm25_rm3_unjudged.ipynb  grid_search_bm25_unjudged.ipynb  grid_search_dlm_rm3_unjudged.ipynb  grid_search_dlm_unjudged.ipynb
