[project]
name = "ecir24-precision-argument-retrieval"
description = "DeepCT-enhanced Lexical Argument Retrieval"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click~=8.1",
    "importlib-metadata~=6.8",
    "ir-datasets~=0.5.5",
    "ir-measures~=0.3.3",
    "jupyter~=1.0",
    "jupyterlab~=4.0",
    "matplotlib~=3.8",
    "numpy~=1.26",
    "pandas~=2.1",
    "python-terrier~=0.9.2",
    "tensorflow~=2.14",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
