[project]
name = "deepct-lexical-argument-retrieval"
description = "DeepCT-enhanced Lexical Argument Retrieval"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click~=8.1",
    "pyterrier-deepct @ git+https://github.com/terrierteam/pyterrier_deepct.git@73662a30d840a0d47894f9bf9237dc3a70ff9d4e",
    "ijson~=3.2",
    "importlib-metadata~=8.0",
    "ir-datasets~=0.5.5",
    "ir-measures~=0.3.3",
    "jupyter~=1.0",
    "jupyterlab~=4.0",
    "matplotlib~=3.8",
    "nltk~=3.8",
    "numpy~=2.0",
    "pandas~=2.1",
    "python-terrier~=0.11.0",
    "spacy~=3.7",
    "tensorflow~=2.14",
    "tira~=0.0.103",
    "tqdm~=4.66",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["data", "notebooks"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]
